// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeNetwork - snapshots should render badge network with bottom right position correctly 1`] = `
<BadgeBase
  style={
    Object {
      "bottom": -4,
      "right": -4,
    }
  }
  testID="badge-network"
>
  <Avatar
    imageSource={
      Object {
        "uri": "https://assets.coingecko.com/coins/images/279/small/ethereum.png?1595348880",
      }
    }
    name="Ethereum"
    size="16"
    variant="Network"
  />
</BadgeBase>
`;

exports[`BadgeNetwork - snapshots should render badge network with default position correctly 1`] = `
<BadgeBase
  style={
    Object {
      "right": -4,
      "top": -4,
    }
  }
  testID="badge-network"
>
  <Avatar
    imageSource={
      Object {
        "uri": "https://assets.coingecko.com/coins/images/279/small/ethereum.png?1595348880",
      }
    }
    name="Ethereum"
    size="16"
    variant="Network"
  />
</BadgeBase>
`;
